# AmbiTap

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  STYLE.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  docs.yml  style.yml
bench/: CMakeLists.txt  bench_main.cpp
bench/compare/: README.md  bench_libspatialaudio.cpp  bench_saf.c  run.sh
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: cheat-sheet.md  further-reading.md  glossary.md  object-reference.md
book/src/part0/: three-ways.md  two-ears.md
book/src/part1/: fifteen-minutes.md  out-of-the-headphones.md  turning-your-head.md
book/src/part2/: omni-and-figure-8s.md  order-and-blur.md  paperwork.md
book/src/part3/: beds.md  binaural.md  decoding.md  distance.md  mixing.md  placing-sources.md  rooms.md  transaural.md  watching.md
book/src/part4/: atmos.md  daw.md  games-xr.md  pd.md  recording.md
book/src/part5/: decision-guide.md
cmake/: AmbiTapConfig.cmake.in
docs/: AUDIT.md  COMPARISON.md  CONCEPTS.md  Doxyfile  EMBEDDED.md  PERCEPTUAL-VERIFICATION.md  ROADMAP.md
examples/: CMakeLists.txt  binaural_render.cpp  encode_rotate_decode.cpp
include/ambitap/: ambitap.h
include/ambitap/analysis/: energy_vector.h  soundfield_grid.h
include/ambitap/dsp/: binaural_core.h  binaural_renderer.h  decoder.h  directional_loudness.h  doppler.h  encoder.h  format_converter.h  mirror.h  nfc.h  plate.h  room.h  room_data.h  rotator.h  spatial_compressor.h  virtual_mic.h  xtc.h
include/ambitap/dsp/util/: async_rebuilder.h  matrix_applier.h  rt_published.h  sh_block_applier.h  smoothing.h
include/ambitap/math/binaural/: convolution.h  convolver_bank.h  hrtf_data.h  ooura_fft.h  resample.h  sofa_reader.h
include/ambitap/math/core/: coords.h  fast_math.h  indexing.h  normalization.h  rotation.h  rotation_recurrence.h  spherical_harmonics.h  validate.h
include/ambitap/math/decoding/: allrad.h  epad.h  max_re.h  mode_matching.h
include/ambitap/math/geometry/: convex_hull.h  layouts.h  speaker_layout.h  tdesigns.h
notebooks/: ambitap_demo.ipynb  ambitap_py.py  decoder_analysis.ipynb  dsp_behavior.ipynb  hrtf_analysis.ipynb  library_comparison.ipynb  requirements-comparison.txt  requirements.txt  room_model.py  room_verification.ipynb  soundfield_analysis.ipynb
scripts/: generate_book_figures.py  generate_hrtf.py  generate_room_data.py  generate_tdesigns.py  requirements.txt
tests/: CMakeLists.txt  test_analysis_soundfield.cpp  test_binaural.cpp  test_core.cpp  test_decoding.cpp  test_dsp_binaural.cpp  test_dsp_encoder.cpp  test_dsp_matrix.cpp  test_dsp_stateful.cpp  test_dsp_threads.cpp  test_dsp_transforms.cpp  test_embedded_core.cpp  test_geometry.cpp  test_hardening.cpp  test_nfc.cpp  test_plate.cpp  test_room.cpp  test_rotation.cpp  test_rt_safety.cpp  test_sofa.cpp  test_xtc.cpp
tests/fuzz/: CMakeLists.txt  README.md  fuzz_sofa_reader.cpp
tests/fuzz/corpus/: hdf5_magic_only  not_hdf5  truncated_hdf5  valid.sofa
tools/capi/: CMakeLists.txt  ambitap_capi.cpp  ambitap_capi.h
tools/embedded/: rt_core_check.cpp
tools/embedded/qemu/: mps3_an547.ld  startup_an547.c
tools/hrtf_trim/: hrtf_trim.cpp
tools/room_render/: CMakeLists.txt  room_render.cpp
ui/: UI.md  package-lock.json  package.json  tsconfig.json
ui/core/: arcball.ts  coords.ts  drag.ts  fft.ts  imagesource.ts  osc.ts
ui/hosts/max/: ambitap.doa.ts  ambitap.heatmap.ts  ambitap.layout.ts  ambitap.meters.ts  ambitap.panner.ts  ambitap.roomdesigner.ts  ambitap.rotation.ts  ambitap.xtcdesigner.ts
ui/hosts/web/: ambitap-module.ts  designers.html  designers.ts  index.html  main.ts  remote.ts  worklet.ts
ui/render/: canvas.ts  mgraphics.ts  renderer.ts
ui/scripts/: build-wasm.sh  build.mjs  osc-bridge.mjs
ui/test/: arcball.test.ts  coords.test.ts  doa.test.ts  drag.test.ts  fft.test.ts  heatmap.test.ts  imagesource.test.ts  layout.test.ts  meters.test.ts  osc.test.ts  panner.test.ts  roomdesigner.test.ts  rotation.test.ts  wasm.test.ts  xtcdesigner.test.ts
ui/types/: audioworklet.d.ts  max.d.ts
ui/widgets/: doa.ts  heatmap.ts  layout.ts  meters.ts  panner.ts  roomdesigner.ts  rotation.ts  xtcdesigner.ts
